Entry more, tags pages. Full rebuild is timing out.

--- a/assets/maintenance.html
+++ b/assets/maintenance.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html xmlns:fb="http://ogp.me/ns/fb#">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Desktop Backgrounds | Spartacus Wallpaper</title>
-    <link href="http://spartacuswallpaper.com/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="http://spartacuswallpaper.com/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-</head>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<body style="background: #4a5510;">
-	<div class="container-fluid">
-		<div class="row">
-    		<div class="col-xs-2"></div>
-			<div class="col-xs-8">
-    			<div id="main" style="text-align: center; padding:10em 0;">
-            		<img src="http://spartacuswallpaper.com/images/logo.png" alt="Spartacus Wallpaper" class="logo" style="position: static; margin: 0 auto;">
-        			<h1>Site is undergoing maintenance, please check back in a few minutes.</h1>
+        <title>Desktop Backgrounds | Spartacus Wallpaper</title>
+        <link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
+        <link href="/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
+    </head>
+
+    <body style="border:none;">
+        <div class="container-fluid" style="border: 10px solid rgb(134,155,122)">
+            <div class="row">
+                <div class="col-xs-2"></div>
+                <div class="col-xs-8">
+                    <div id="main" style="text-align: center; padding:7em 0 10em;">
+                        <img src="/images/maintenance.jpg" alt="Spartacus Wallpaper">
+                        <h1 class="content-title">Site is undergoing maintenance, please check back in a few minutes.</h1>
+                    </div>
                 </div>
-			</div>
-		</div>
-	</div>
+            </div>
+        </div>
 	</body>
 </html>
 
