more style changes, queue fixes, banners

--- a/assets/maintenance.html
+++ b/assets/maintenance.html
@@ -23,6 +23,7 @@
             }
             #main img {
                 width:100%;
+                max-width:851px;
             }
             @media screen and (max-width: 475px) {
                 #main {
@@ -37,7 +38,7 @@
     <body>
         <div id="main">
             <img src="/images/maintenance.jpg" alt="Spartacus Wallpaper">
-            <h1 class="content-title">Site is undergoing maintenance, please check back in a few minutes.</h1>
+            <h2 class="content-title">Site is undergoing maintenance, please check back in a few minutes.</h2>
         </div>
 	</body>
 </html>
